--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "@react-input/mask": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.3",
     "framer-motion": "^11.2.10",
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "swiper": "^11.1.3",
